Change some lines

--- a/Home.html
+++ b/Home.html
@@ -329,7 +329,7 @@
 
     <!-- Navigation Bar -->
     <div class="navbar">
-        <a href="#" class="logo">ORPHIC</a>
+        <a href="index.html" class="logo">ORPHIC</a>
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Campaigns</a></li>
@@ -421,6 +421,3 @@
 </body>
 
 </html>
-
-
-
