--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900&display=swap">
     <title>Weather App - Landing</title>
 
     <style>
+        @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700,900&display=swap');
+
+        :root {
+            --gradient: linear-gradient(135deg, #3c4d6d 10%, #001f3d 100%);
+        }
+
+        * {
+            box-sizing: border-box;
+            line-height: 1.25em;
+        }
+
         body {
             margin: 0;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -18,9 +31,76 @@
             color: #fff;
             text-align: center;
             overflow: hidden;
+            position: relative;
             transition: transform 1s ease-in-out;
         }
 
+        /* Flipped Slice Background */
+        .body-background {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: var(--gradient);
+            clip-path: polygon(0 0, 100% 0, 100% 50%, 0 100%); /* Original slice */
+            z-index: -1;
+        }
+
+        /* Flip the slice background horizontally */
+        .body-background.flipped {
+            clip-path: polygon(100% 0, 0 0, 0 50%, 100% 100%); /* Mirrored slice */
+        }
+
+        /* Navbar Styles */
+        .navbar {
+            width: 100%;
+            background: var(--gradient);
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 15px 50px;
+            position: absolute;
+            top: 0;
+            z-index: 100;
+            font-family: 'Montserrat', sans-serif;
+        }
+
+        .navbar .logo {
+            color: #fff;
+            font-size: 24px;
+            font-weight: 700;
+            text-decoration: none;
+        }
+
+        .navbar ul {
+            display: flex;
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+        }
+
+        .navbar li {
+            margin-right: 20px;
+        }
+
+        .navbar li:last-child {
+            margin-right: 0;
+        }
+
+        .navbar a {
+            color: #fff;
+            text-decoration: none;
+            font-size: 18px;
+            font-weight: bold;
+            transition: color 0.3s;
+        }
+
+        .navbar a:hover {
+            color: #72EDF2;
+        }
+
+        /* Landing Page Styles */
         .landing-background {
             background-image: url('https://images.unsplash.com/photo-1486998672391-3fae07c42102');
             background-size: cover;
@@ -82,16 +162,30 @@
 
 <body>
 
+    <!-- Flipped Background Slice -->
+    <div class="body-background flipped"></div>
+
+    <!-- Navigation Bar -->
+    <div class="navbar">
+        <a href="index.html" class="logo">ORPHIC</a>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Campaigns</a></li>
+            <li><a href="#">About</a></li>
+        </ul>
+    </div>
+
+    <!-- Landing Section -->
     <div class="landing-background"></div>
 
     <div class="landing-container">
-        <h1>Welcome to WeatherApp</h1>
+        <h1>Welcome to ORPHIC Web-App</h1>
         <p>Get accurate and up-to-date weather information for any city, anytime, anywhere.</p>
         <button class="btn-get-started" id="startBtn">Get Started</button>
     </div>
 
     <div class="footer">
-        <p>&copy; 2024 WeatherApp | All Rights Reserved</p>
+        <p>&copy; 2024 ORPHIC | All Rights Reserved</p>
     </div>
 
     <script>
