--- a/Home.html
+++ b/Home.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <link rel="stylesheet" href="weatherStatus.css">
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <title>Document</title>
 </head>
 
@@ -23,6 +24,7 @@
     * {
         box-sizing: border-box;
         line-height: 1.25em;
+        border: 1px solid rgb(255, 0, 0);
     }
 
     body {
@@ -37,11 +39,11 @@
 
     .navbar {
         width: 100%;
-        background-color: linear-gradient(135deg, #3c4d6d 10%, #001f3d 100%);
+        background-color: #001f3d;
         display: flex;
         justify-content: space-between;
         padding: 15px 50px;
-        position: absolute;
+        position: sticky;
         top: 0;
         z-index: 100;
     }
@@ -78,51 +80,23 @@
 
     .navbar a:hover {
         color: #72EDF2;
-    }   
-
-    .sections {
-        width: 90%;
-        max-width: 1200px;
-        margin-top: 50px;
-        padding: 0 10px;
     }
 
-    .about-section,
-    .campaign-section {
-        background: rgba(255, 255, 255, 0.1);
-        color: white;
-        border-radius: 15px;
-        padding: 30px;
-        margin-bottom: 30px;
-        box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+    .NavbarSections {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        width: 100%;
+        padding: 20px;
+        box-sizing: border-box;
     }
 
-    .about-section h2,
-    .campaign-section h2 {
-        font-size: 2.5rem;
-        margin-bottom: 20px;
-    }
-
-    .about-section p,
-    .campaign-section p {
-        font-size: 1.2rem;
-        line-height: 1.6;
-    }
-
-    .campaign-btn {
-        background: #72EDF2;
-        border: none;
-        padding: 10px 25px;
-        font-size: 1.2rem;
-        font-weight: bold;
-        color: #2E3C45;
-        border-radius: 5px;
-        cursor: pointer;
-        transition: 200ms ease;
-    }
-
-    .campaign-btn:hover {
-        background: #00A3E0;
+    .NavbarSections>div {
+        width: 100%;
+        max-width: 60%;
+        margin: 20px 0;
     }
 
     .evacuationSection {
@@ -165,37 +139,58 @@
         color: #e98848;
     }
 
-    .windyMap {
+    .campaign-section,
+    .windyMap,
+    .about-section {
+        padding: 20px;
+        border: 1px solid #ccc;
+        border-radius: 8px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         background-color: rgba(255, 255, 255, 0.1);
-        color: #fff;
-        border-radius: 15px;
-        padding: 30px;
-        margin-bottom: 25px;
+        color: white;
     }
+
+    .campaign-btn {
+        background: #72EDF2;
+        border: none;
+        padding: 10px 25px;
+        font-size: 1.2rem;
+        font-weight: bold;
+        color: #2E3C45;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: 200ms ease;
+    }
+
+    .campaign-btn:hover {
+        background: #00A3E0;
+    }
+
 
     #map {
         height: 600px;
         border-radius: 20px;
         box-shadow: 0 0 15px rgba(255, 255, 255, 0.726);
         border: 2px #ffffff solid;
-
+        position: sticky;
     }
 
-    /* Add transitions and additional styles here */
 </style>
 
 <body>
 
     <!-- Navigation Bar -->
+
     <div class="navbar">
         <a href="index.html" class="logo">ORPHIC</a>
         <ul>
-            <li><a href="Home.html">Home</a></li>
-            <li><a href="#">Campaigns</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#campaign">Campaigns</a></li>
+            <li><a href="#about">About</a></li>
             <li><a href="index.html">Exit</a></li>
         </ul>
     </div>
+
 
     <!-- Main Content -->
     <main>
@@ -265,7 +260,6 @@
                     </div>
                 </div>
             </div>
-
         </section>
 
         <!-- Embed Map Section -->
@@ -285,9 +279,11 @@
             </div>
         </section>
 
-        <!-- Sections -->
-        <section class="sections">
-            <div class="campaign-section">
+        <!-- Navigation Bar Sections-->
+        <section class="NavbarSections">
+
+            <!-- Campaign-->
+            <div class="campaign-section" id="campaign">
                 <h2>Stay Informed with Accurate Weather Updates</h2>
                 <p>At Orphic, we provide real-time weather information to help you plan your day and stay safe in any
                     condition. Our goal is to offer reliable forecasts and keep you connected with changing weather
@@ -300,6 +296,7 @@
 
             </div>
 
+            <!-- Windy Map-->
             <div class="windyMap">
                 <h2>Explore Live Weather Data with Windy</h2>
                 <p>Get detailed weather forecasts, interactive maps, and live data for any location with Windy. Stay
@@ -310,7 +307,8 @@
 
             </div>
 
-            <div class="about-section">
+            <!-- About-->
+            <div class="about-section" id="about">
                 <h2>About Orphic</h2>
                 <p>Orphic is an innovative platform that provides real-time weather updates tailored to the local
                     climate of
