--- a/Home.html
+++ b/Home.html
@@ -504,9 +504,11 @@
               weather app.
             </p>
 
+            <a href="https://or-phic.github.io/Orphic/">
             <button class="campaign-btn" onclick="downloadApp()">
               Know More
             </button>
+          </a>
           </div>
         </div>
     </section>
