--- a/Home.html
+++ b/Home.html
@@ -203,7 +203,7 @@
     transform: scale(1.05);
   }
 
-  
+
 
   .applet-container {
     flex: 1;
@@ -273,7 +273,10 @@
   <!-- Navigation Bar -->
 
   <div class="navbar">
-    <a href="index.html" class="logo">ORPHIC</a>
+    <a href="index.html" class="logo">
+      <img src="Photo/462550984_894875502623848_703076749374653196_n.jpg" alt="Orphic Logo" style="height: 50px;" />
+      ORPHIC
+    </a>
     <ul>
       <li><a href="#">Home</a></li>
       <li><a href="#guide">Guide</a></li>
@@ -452,65 +455,65 @@
 
       </section>
 
-      
-        <!-- Windy Map-->
-        <div class="windyMap">
-          <h2>Explore Live Weather Data with Windy</h2>
+
+      <!-- Windy Map-->
+      <div class="windyMap">
+        <h2>Explore Live Weather Data with Windy</h2>
+        <p>
+          Get detailed weather forecasts, interactive maps, and live data for
+          any location with Windy. Stay informed and plan ahead with the most
+          accurate weather information.
+        </p>
+
+        <iframe src="https://embed.windy.com/?10.828,123.464,7,m:eflajEQ" class="mapFrame" width="100%" height="500"
+          frameborder="1" allowfullscreen></iframe>
+      </div>
+
+      <!-- About-->
+      <div class="about-section" id="about">
+        <h2>About Orphic</h2>
+        <p>
+          Orphic is an innovative platform that provides real-time weather
+          updates tailored to the local climate of Manolo Fortich, Bukidnon.
+          Our goal is to help residents and visitors stay informed about
+          current weather conditions, including temperature, humidity, wind
+          speeds, and more, all of which can significantly influence daily
+          activities and the environment.
+        </p>
+
+        <p>
+          By offering accurate and timely weather forecasts, Orphic empowers
+          the community to make informed decisions about their day-to-day
+          activities. Whether you're planning outdoor events, agriculture
+          activities, or just need to know the weather for travel purposes,
+          Orphic has got you covered. We are dedicated to improving the lives
+          of people in Manolo Fortich by providing essential weather
+          information to help them better prepare for the elements and adapt
+          to local climate patterns.
+        </p>
+        <!-- Campaign-->
+        <div class="campaign-section" id="campaign">
+          <h2>Stay Informed with Accurate Weather Updates</h2>
           <p>
-            Get detailed weather forecasts, interactive maps, and live data for
-            any location with Windy. Stay informed and plan ahead with the most
-            accurate weather information.
+            At Orphic, we provide real-time weather information to help you plan
+            your day and stay safe in any condition. Our goal is to offer
+            reliable forecasts and keep you connected with changing weather
+            patterns.
           </p>
 
-          <iframe src="https://embed.windy.com/?10.828,123.464,7,m:eflajEQ" class="mapFrame" width="100%" height="500"
-            frameborder="1" allowfullscreen></iframe>
-        </div>
-
-        <!-- About-->
-        <div class="about-section" id="about">
-          <h2>About Orphic</h2>
           <p>
-            Orphic is an innovative platform that provides real-time weather
-            updates tailored to the local climate of Manolo Fortich, Bukidnon.
-            Our goal is to help residents and visitors stay informed about
-            current weather conditions, including temperature, humidity, wind
-            speeds, and more, all of which can significantly influence daily
-            activities and the environment.
+            Whether it's a sunny day or a stormy night, we’ve got you covered.
+            Stay prepared and make informed decisions with our easy-to-use
+            weather app.
           </p>
 
-          <p>
-            By offering accurate and timely weather forecasts, Orphic empowers
-            the community to make informed decisions about their day-to-day
-            activities. Whether you're planning outdoor events, agriculture
-            activities, or just need to know the weather for travel purposes,
-            Orphic has got you covered. We are dedicated to improving the lives
-            of people in Manolo Fortich by providing essential weather
-            information to help them better prepare for the elements and adapt
-            to local climate patterns.
-          </p>
-          <!-- Campaign-->
-          <div class="campaign-section" id="campaign">
-            <h2>Stay Informed with Accurate Weather Updates</h2>
-            <p>
-              At Orphic, we provide real-time weather information to help you plan
-              your day and stay safe in any condition. Our goal is to offer
-              reliable forecasts and keep you connected with changing weather
-              patterns.
-            </p>
-
-            <p>
-              Whether it's a sunny day or a stormy night, we’ve got you covered.
-              Stay prepared and make informed decisions with our easy-to-use
-              weather app.
-            </p>
-
-            <a href="https://or-phic.github.io/Orphic/">
+          <a href="https://or-phic.github.io/Orphic/">
             <button class="campaign-btn" onclick="downloadApp()">
               Know More
             </button>
           </a>
-          </div>
         </div>
+      </div>
     </section>
 
     <section id="hotlines" class="hotlines">
