--- a/index.html
+++ b/index.html
@@ -43,13 +43,15 @@
             width: 100%;
             height: 100%;
             background: var(--gradient);
-            clip-path: polygon(0 0, 100% 0, 100% 50%, 0 100%); /* Original slice */
+            clip-path: polygon(0 0, 100% 0, 100% 50%, 0 100%);
+            /* Original slice */
             z-index: -1;
         }
 
         /* Flip the slice background horizontally */
         .body-background.flipped {
-            clip-path: polygon(100% 0, 0 0, 0 50%, 100% 100%); /* Mirrored slice */
+            clip-path: polygon(100% 0, 0 0, 0 50%, 100% 100%);
+            /* Mirrored slice */
         }
 
         /* Navbar Styles */
@@ -67,18 +69,19 @@
         }
 
         .navbar .logo {
+            display: flex;
+            align-items: center;
             color: #fff;
             font-size: 24px;
             font-weight: 700;
             text-decoration: none;
         }
 
-        .navbar ul {
-            display: flex;
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
+        .navbar .logo img {
+            height: 50px;
+            margin-right: 10px;
         }
+
 
         .navbar li {
             margin-right: 20px;
@@ -167,7 +170,11 @@
 
     <!-- Navigation Bar -->
     <div class="navbar">
-        <a href="index.html" class="logo">ORPHIC</a>
+        <a href="index.html" class="logo">
+            <img src="Photo/462550984_894875502623848_703076749374653196_n.jpg" alt="Orphic Logo"
+                style="height: 50px;" />
+            <span class="logo-text">ORPHIC</span>
+        </a>
     </div>
 
     <!-- Landing Section -->
