--- a/Home.html
+++ b/Home.html
@@ -28,7 +28,7 @@
   * {
     box-sizing: border-box;
     line-height: 1.25em;
-    /*border: 0.1px solid red;*/
+    /*border: 1px solid red;*/
   }
 
   body {
@@ -43,7 +43,7 @@
 
   .navbar {
     width: 100%;
-    background-color: #001f3d;
+    background-image: linear-gradient(235deg, #001f3d 87%, #21314e 1%);
     display: flex;
     justify-content: space-between;
     padding: 15px 50px;
@@ -103,13 +103,17 @@
     margin: 20px 0;
   }
 
+  main {
+    margin: 0 150px;
+  }
+
   .evacuationSection {
     display: flex;
     flex-wrap: wrap;
     gap: 2rem;
     padding: 2rem;
     background-color: rgba(255, 255, 255, 0.1);
-    border-radius: 8px;
+    border-radius: 15px;
   }
 
   .evacuationText {
@@ -151,19 +155,15 @@
   }
 
   .card {
-    margin-top: -2%;
-    margin-bottom: -2%;
     background-color: rgba(255, 255, 255, 0.1);
     display: flex;
     flex-direction: row;
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    width: 62%;
-    max-width: 100%;
     padding: 50px;
     border: 1px solid white;
     text-align: center;
-    margin: auto;
+    flex-wrap: inherit;
   }
 
   .card h1 {
@@ -174,6 +174,8 @@
   .sectionCard {
     margin: 0;
     padding: 60px;
+    justify-items: center;
+
   }
 
   .sectionCard h2 {
@@ -185,12 +187,12 @@
   .sectionCard ul {
     list-style-type: none;
     padding: 0;
+    width: 300px;
   }
 
   .sectionCard li {
     background-color: rgb(59, 120, 170);
     padding: 10px;
-    padding: auto;
     margin-bottom: 20px;
     border-radius: 10px;
     color: white;
@@ -202,8 +204,6 @@
   .sectionCard li:hover {
     transform: scale(1.05);
   }
-
-
 
   .applet-container {
     flex: 1;
@@ -217,7 +217,7 @@
     color: #e98848;
   }
 
-  .campaign-section {
+  .more-section {
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -235,7 +235,7 @@
     color: white;
   }
 
-  .campaign-btn {
+  .more-btn {
     background: #72edf2;
     border: none;
     padding: 10px 25px;
@@ -247,7 +247,7 @@
     transition: 200ms ease;
   }
 
-  .campaign-btn:hover {
+  .more-btn:hover {
     background: #00a3e0;
   }
 
@@ -258,6 +258,7 @@
     text-align: center;
     box-shadow: 0 10px 25px rgb(255, 255, 255);
     border: 1px;
+    width: 100%;
   }
 
   #map {
@@ -274,7 +275,7 @@
 
   <div class="navbar">
     <a href="index.html" class="logo">
-      <img src="Photo/462550984_894875502623848_703076749374653196_n.jpg" alt="Orphic Logo" style="height: 50px;" />
+      <img src="Photo/OrphicLogo.png" alt="Orphic Logo" style="height: 50px;" />
       ORPHIC
     </a>
     <ul>
@@ -321,50 +322,53 @@
               </div>
             </div>
           </div>
-          <div class="week-container">
-            <ul class="week-list">
-              <li>
-                <span class="day-name"></span>
-                <span class="day-temp"></span>
-                <span class="day-icon"></span>
-              </li>
-              <li>
-                <span class="day-name"></span>
-                <span class="day-temp"></span>
-                <span class="day-icon"></span>
-              </li>
-              <li>
-                <span class="day-name"></span>
-                <span class="day-temp"></span>
-                <span class="day-icon"></span>
-              </li>
-              <li>
-                <span class="day-name"></span>
-                <span class="day-temp"></span>
-                <span class="day-icon"></span>
-              </li>
-              <li>
-                <span class="day-name"></span>
-                <span class="day-temp"></span>
-                <span class="day-icon"></span>
-              </li>
-              <li>
-                <span class="day-name"></span>
-                <span class="day-temp"></span>
-                <span class="day-icon"></span>
-              </li>
-              <div class="clear"></div>
-            </ul>
-          </div>
-          <div class="location-container">
-            <input class="location-input" type="text" id="city" value="Manolo Fortich"
-              style="border: 1px solid white" />
+          <div class="one">
+            <div class="week-container">
+              <ul class="week-list">
+                <li>
+                  <span class="day-name"></span>
+                  <span class="day-temp"></span>
+                  <span class="day-icon"></span>
+                </li>
+                <li>
+                  <span class="day-name"></span>
+                  <span class="day-temp"></span>
+                  <span class="day-icon"></span>
+                </li>
+                <li>
+                  <span class="day-name"></span>
+                  <span class="day-temp"></span>
+                  <span class="day-icon"></span>
+                </li>
+                <li>
+                  <span class="day-name"></span>
+                  <span class="day-temp"></span>
+                  <span class="day-icon"></span>
+                </li>
+                <li>
+                  <span class="day-name"></span>
+                  <span class="day-temp"></span>
+                  <span class="day-icon"></span>
+                </li>
+                <li>
+                  <span class="day-name"></span>
+                  <span class="day-temp"></span>
+                  <span class="day-icon"></span>
+                </li>
+                <div class="clear"></div>
+              </ul>
+            </div>
+            <div class="location-container">
+              <input class="location-input" type="text" id="city" value="Manolo Fortich"
+                style="border: 1px solid white" />
+            </div>
           </div>
         </div>
       </div>
     </section>
 
     <!-- Embed Map Section -->
+
     <section class="evacuationSection">
       <div class="evacuationText">
         <h1>Manolo Fortich: A Snapshot</h1>
@@ -389,7 +393,7 @@
     <!-- Navigation Bar Sections-->
     <section class="NavbarSections">
 
-      <section class="cardSection">
+      <section class="cardSection" id="guide">
         <div class="aboutCard">
           <h1>Typhoon Preparedness Guide</h1>
           <p>Typhoon preparedness is essential for saving lives, protecting property, ensuring the availability of basic
@@ -398,7 +402,7 @@
             typhoon strikes.</p>
         </div>
 
-        <div class="card" id="guide">
+        <div class="card">
 
           <div class="sectionCard">
             <h2> Before the Typhoon:</h2>
@@ -411,7 +415,8 @@
                 and important documents.</li>
               <li><i class="fas fa-home list-icon fa-3x"></i> Prepare your home by securing windows, doors, and outdoor
                 objects.</li>
-              <li><i class="fas fa-bag list-icon fa-3x"></i> Make an evacuation plan and pack a go-bag with essentials.
+              <li><i class="fas fa-location-dot list-icon fa-3x"></i> Make an evacuation plan and pack a go-bag with
+                essentials.
               </li>
               <li><i class="fas fa-paw list-icon fa-3x"></i> Ensure pets are safe and have food and identification tags.
               </li>
@@ -492,7 +497,7 @@
           to local climate patterns.
         </p>
         <!-- Campaign-->
-        <div class="campaign-section" id="campaign">
+        <div class="more-section" id="campaign">
           <h2>Stay Informed with Accurate Weather Updates</h2>
           <p>
             At Orphic, we provide real-time weather information to help you plan
@@ -508,27 +513,27 @@
           </p>
 
           <a href="https://or-phic.github.io/Orphic/">
-            <button class="campaign-btn" onclick="downloadApp()">
+            <button class="more-btn" onclick="downloadApp()">
               Know More
             </button>
           </a>
         </div>
       </div>
     </section>
-
-    <section id="hotlines" class="hotlines">
-      <footer>
-        <h2>Manolo Fortich Emergency Hotlines</h2>
-        <p>
-          Local Disaster Risk Reduction and Management Office (LDRRMO):
-          0915-813-9494
-        </p>
-        <p>Barangay Health Emergency Respose Team (BHERTs): 0956-407-9652</p>
-        <p>Manolo Fortich Rescue: 0915-813-9494</p>
-        <p>Police Department: 0916-313-7327</p>
-      </footer>
-    </section>
   </main>
+
+  <section id="hotlines" class="hotlines">
+    <footer>
+      <h2>Manolo Fortich Emergency Hotlines</h2>
+      <p>
+        Local Disaster Risk Reduction and Management Office (LDRRMO):
+        0915-813-9494
+      </p>
+      <p>Barangay Health Emergency Respose Team (BHERTs): 0956-407-9652</p>
+      <p>Manolo Fortich Rescue: 0915-813-9494</p>
+      <p>Police Department: 0916-313-7327</p>
+    </footer>
+  </section>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
