--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         /* Navbar Styles */
         .navbar {
             width: 100%;
-            background: var(--gradient);
+            background-image: linear-gradient(236deg, #001f3d 87%, #21314e 1%);
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -171,7 +171,7 @@
     <!-- Navigation Bar -->
     <div class="navbar">
         <a href="index.html" class="logo">
-            <img src="Photo/462550984_894875502623848_703076749374653196_n.jpg" alt="Orphic Logo"
+            <img src="Photo/OrphicLogo.png" alt="Orphic Logo"
                 style="height: 50px;" />
             <span class="logo-text">ORPHIC</span>
         </a>
